integrated new css lib, fixed that white space issue too

--- a/css/site.css
+++ b/css/site.css
@@ -7,14 +7,14 @@ body {background:#fff;font-family:Arial,Verdana,Helvetica,sans-serif;text-align:
 header, section, footer {width:1000px; margin:0 auto 0 auto;text-align:left;}
 section, footer {width:980px;padding:10px;}
 
-	header {background:#ccc;display:inline-table;}
+	header {background:#ccc;}
 		header a#logo {float:left;padding:5px;}
-		header a#logo h1 {color:#444;padding:20px;}
+		header a#logo h1 {color:#444;padding:20px 0 20px 10px;}
 	
-	header nav {background:#ddd;clear:both;padding:5px 5px 2px 5px;}
+	header nav {background:#ddd;clear:both;}
 		header nav ul {display:inline-table;}
 		header nav ul li {color:#444;float:left;padding-right:15px;}
-		header nav ul li a {color:#444;padding:5px 5px 5px 5px;}
+		header nav ul li a {color:#444;padding:10px;display:block;}
 		header nav ul li a:hover {color:#fff; background:#444;}
 
 section {background:#eee;min-height:500px;}
